<resources>
    <string name="app_name">Foogt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nickname">昵称</string>
    <string name="introduction">简介</string>
    <string name="save">保 存</string>
    <string name="changeIntroduction">修改资料</string>
    <string name="joke">注册即同意我们的所有条款（其实我们就没有）</string>
    <string name="username">用户名</string>
    <string name="input_name_hint">请输您的注册账号</string>
    <string name="register_pwd">注册密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="register_welcome">欢迎注册</string>
    <string name="login_welcome">欢迎登陆</string>
    <string name="exit_account">退出当前帐号</string>
    <string name="account_management">账号管理</string>
    <string name="account_exist">账号已存在</string>
    <string name="http_fail">网络有问题</string>
    <string name="say_something">说点什么...</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="user_coll">收藏</string>
    <string name="set">设置</string>
    <string name="send_blog">发送微博</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">主页</string>
    <string name="comment">评论</string>
    <string name="no_this_user">查无此人</string>
    <string name="network_is_bad">您的网络有点问题</string>
    <string name="login_pwd">登陆密码</string>
    <string name="focus_user_success">已关注</string>
    <string name="long_press_to_focus">长按关注</string>
    <string name="do_not_show_again">不再提醒</string>
    <string name="loading">Loading...</string>
    <string name="weibo">微博</string>
    <string name="user_own_blog">原创微博</string>
    <string name="add_new_user">添加一个新账户</string>
    <string name="collection">collection</string>
    <string name="repost">转发</string>
    <string name="submit">提交</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="transfer_sussess">转发成功</string>
    <string name="transfer_failed">转发失败</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="upload_img_success">头像上传成功</string>
    <string name="refresh_to_show">刷新即可显示</string>

</resources>
